--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ td{
 	<br>
 	<hr>
 <a href="https://www.youtube.com/watch?v=Q33KBiDriJY&t=2s&ab_channel=edureka%21"> <img src="free.jpg" width="50px" height="50px" alt="there was suppposed to obe an image here"> </a>
+<img src="1.png" width="50px" height="50px" alt="there was suppposed to obe an image here">
 <p>
 <ol>	
 	<li>coffee </li>
